# rust-svc

./: Cargo.toml  Dockerfile  README.md  build.sh
src/: main.rs
